# crypto

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LIVE_TRADING_CHECKLIST.md  README.md  compose.yaml
backend/: pyproject.toml  railway.json
backend/src/tradebot/: __init__.py  __main__.py  worker.py
backend/src/tradebot/api/: __init__.py  app.py
backend/src/tradebot/authorization/: __init__.py  queue.py
backend/src/tradebot/backtest/: __init__.py  account_report.py  parity.py  portfolio_runner.py  report.py  runner.py  walkforward.py
backend/src/tradebot/competition/: __init__.py  candidacy.py  lineup.py  rules.py
backend/src/tradebot/core/: __init__.py  clock.py  config.py  events.py  logging.py  metrics.py  models.py
backend/src/tradebot/engine/: __init__.py  trading_engine.py
backend/src/tradebot/evaluation/: __init__.py  advisor.py  allocation.py  bakeoff.py  campaign.py  campaign_driver.py  classifier.py  engine.py  generator.py  holdout.py  improve.py  learning.py  models.py  presets.py  promotion_policy.py  replay.py  reports.py  runner.py  sensitivity.py  settings_diff.py  statistics.py  strategy.py  suggestions.py  sweep.py  timeline.py  triggered_sweeps.py
backend/src/tradebot/execution/: __init__.py  adapter.py  simulator.py
backend/src/tradebot/indicators/: __init__.py  adx.py  atr.py  bollinger.py  ema.py  rsi.py
backend/src/tradebot/marketdata/: __init__.py  aggregation.py  binance_history.py  funding.py  gaps.py  live_feed.py  validation.py
backend/src/tradebot/news/: __init__.py  calendar.py  classifier.py  flags.py  gate.py  models.py  monitor.py
backend/src/tradebot/notify/: __init__.py  heartbeat.py  telegram.py
backend/src/tradebot/persistence/: __init__.py  (+5 more)
backend/tests/: test_database_available.py  test_worker.py
backend/tests/api/: test_app.py
backend/tests/authorization/: test_queue.py
backend/tests/backtest/: test_parity.py  test_portfolio_runner.py  test_report.py  test_runner.py  test_walkforward.py
backend/tests/competition/: test_candidacy.py  test_lineup.py  test_rules.py
backend/tests/core/: test_clock.py  test_config.py  test_events.py  test_logging.py  test_models.py
backend/tests/engine/: test_trading_engine.py
backend/tests/evaluation/: test_advisor.py  test_allocation.py  test_bakeoff.py  test_campaign.py  test_campaign_driver.py  test_classifier.py  test_engine.py  test_generator.py  test_holdout.py  test_improve.py  test_learning.py  test_presets.py  test_replay.py  test_reports.py  test_runner.py  test_sensitivity.py  test_statistics.py  test_strategy.py  test_suggestions.py  test_sweep.py  test_timeline.py  test_triggered_sweeps.py
backend/tests/execution/: test_simulator.py
backend/tests/golden/: generate_golden_backtest.py  generate_indicator_references.py  golden_backtest.json  harness.py  indicator_references.json  test_golden_backtest.py
backend/tests/indicators/: test_against_talib_references.py  test_indicator_contracts.py
backend/tests/marketdata/: conftest.py  test_aggregation.py  test_binance_history.py  test_funding.py  test_gaps.py  test_live_feed.py  test_validation.py
backend/tests/news/: test_calendar_and_gate.py  test_classifier.py  test_monitor.py
backend/tests/notify/: test_heartbeat.py  test_telegram.py
backend/tests/persistence/: conftest.py  test_backup.py  test_evaluation_store.py  test_stores.py
backend/tests/portfolio/: test_accounting.py
backend/tests/risk/: test_breakers.py  test_manager.py  test_stops.py
backend/tests/signals/: test_data_health.py  test_funding.py  test_regime.py  test_sentiment.py
backend/tests/strategies/: test_adx_trend.py  test_bollinger_reversion.py  test_breakout.py  test_composite.py  test_controls.py  test_funding.py  test_keltner.py  test_mean_reversion.py  test_momentum.py  test_router.py  test_rsi_trend.py  test_squeeze.py  test_supertrend.py  test_trend_following.py  test_tsmom.py  test_vol_breakout.py
(+140 files in other folders)
