[project]
name = "tradebot"
version = "0.1.0"
description = "Autonomous crypto spot trading bot — see ARCHITECTURE.md for the design"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "ccxt>=4.3",
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# The AI research advisor (§12.9) is opt-in. Production installs this extra
# only when TRADEBOT_AI_ADVISOR_ENABLED is set; the worker and API boot fine
# without it, and the advisor stays silent when the package is absent.
ai = [
    "anthropic>=0.50",
]

[dependency-groups]
dev = [
    # The advisor's optional dependency is installed for the test/lint/type
    # gates so its module is type-checked and its degrade paths are exercised.
    "anthropic>=0.50",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradebot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
    "D",   # docstrings (CLAUDE.md: docstrings on every public module/class/function)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in parameter defaults.
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]  # test names document themselves; prose docstrings add noise

[tool.mypy]
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
# Only used by the manually-run reference generator (tests/golden/), never in CI.
module = ["talib", "numpy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "ccxt", "ccxt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
